# pydantic-tutorial

./: main.py  pyproject.toml
